Add verification results - build passed, runtime blocked by missing database